--- a/style.css
+++ b/style.css
@@ -14,12 +14,30 @@ h1{
     text-align: center;
     padding-top: 80px;
 }
+@media (max-width: 768px) {
+    h1{
+    font-family: "Lexend Exa", sans-serif;
+    font-weight:600;
+    font-style: normal;
+    font-size: 60px;
+    text-align: center;
+    padding-top: 0;
+    }
+}
 h2{
     font-family: "Lexend Exa", sans-serif;
     font-size: 40px;
     padding: 30px;
     text-align: center;
 }
+@media (max-width: 768px) {
+    h2{
+    font-family: "Lexend Exa", sans-serif;
+    font-size: 30px;
+    padding: 30px;
+    text-align: center;
+    }
+}    
 .emphasis_design20 span{
     background: linear-gradient(transparent 50%,#eeefaf 50%);
     padding:0 0.1em;
