--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ main img{
     inline-size:320px;
     overflow-wrap:break-word;
 }
-.box-desing8{
+.box-design8{
     padding: 20px;
     background-color: #eeefaf;
     box-shadow: 5px -5px #a6a78c;
