--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ main img{
     .banner{
         padding:0px;
     }
+    .banner p{
+    text-align: center;
+    padding-bottom: 16px;
+    }
 }    
 aside{
     padding: 80px;
