--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ main img{
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
+    margin-bottom: 80px;
 }
 .container2 {
     display: flex;
