--- a/style.css
+++ b/style.css
@@ -206,29 +206,36 @@ aside p{
     width: 45px;
     height: 45px;
 }
-.fukidashi-01-12 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 12px 16px;
-  }
-  .fukidashi-01-12::before {
+.attention {
+    position: relative;
+    display: inline-block;
+    padding: 0 30px;
+    margin-bottom: 36px;
+}
+       
+.attention:before {
+    position: absolute;
+    left: 0;
+    top: 0;
     content: "";
-    width: 30px;
-    height: 2px;
-    transform: rotate(60deg);
-    box-sizing: border-box;
-    background-color: #333333;
-  }
-  .fukidashi-01-12::after {
+    width: 1px;
+    height: 100%;
+    background: #000;
+    border-radius: 3px;
+    transform: rotate(-25deg);
+}
+       
+.attention:after {
+    position: absolute;
     content: "";
-    width: 30px;
-    height: 2px;
-    transform: rotate(-60deg);
-    box-sizing: border-box;
-    background-color: #333333;
-  }
+    right: 0;
+    top: 0;
+    width: 1px;
+    height: 100%;
+    background: #000;
+    border-radius: 3px;
+    transform: rotate(25deg);
+}
 footer{
     font-family: "Lexend Exa", sans-serif;
     text-align: center;
